--- a/package.json
+++ b/package.json
@@ -16,12 +16,11 @@
     "@types/react-dom": "18.0.6",
     "@types/uuid": "8.3.4",
     "axios": "0.27.2",
-    "gh-pages": "^4.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "8.0.4",
     "react-router-dom": "6.4.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "redux": "4.2.0",
     "typescript": "4.7.4",
     "uuid": "9.0.0",
@@ -52,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
